# gatekeep

./: .dockerignore  .env.example  .gitignore  Dockerfile  EVAL_CARD.md  LICENSE  PLAN-injection.md  README.md  docker-compose.yml  policies.yaml  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt
.github/workflows/: ci.yml
demo/: README.md  build_corpus.js  dump_expected.py  expected.json  expected_injection.json  gatekeep.js  index.html  injection_corpus.js  parity.test.js
docs/: architecture.md  configuration.md  deployment.md  injection.md  integration.md
harness/: corpus.jsonl  demo.py  fetch_datasets.py  injection_corpus.jsonl  run_harness.py  run_injection_eval.py
src/gatekeep/: audit.py  config.py  extract.py  forwarder.py  main.py  policy.py  router.py
src/gatekeep/detectors/: __init__.py  injection.py  normalize.py  pii.py  presidio_layer.py  secrets.py
